# live-bootcamp-project

./: compose.yml
auth-service/: .env.example  Cargo.toml
auth-service/src/: config.rs  lib.rs  main.rs  state.rs
auth-service/src/auth/: jwt.rs
auth-service/src/models/: data_store.rs  email.rs  mod.rs  password.rs  user.rs
auth-service/src/requests/: login_request.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs
auth-service/src/utils/: constants.rs
auth-service/tests/api/: helpers.rs  login_test.rs  logout_test.rs  main.rs  routes.rs  signup_test.rs  verify_2fa_test.rs  verify_token_test.rs
