[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
serde = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
